[package]
name = "Pin-Board"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", features = ["default", "persistence"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tray-icon = "0.19"
image = "0.25"
gtk = "0.18"
